@@ -1,0 +1,31 @@
+{
+  "auto_detect": "yes",
+  "customize": {
+    "add_only_with_version": "no",
+    "add_to_path": "yes",
+    "build_dir_name": "unix-utils-win",
+    "check_that_exists": "yes",
+    "ck_version": 10,
+    "env_prefix": "CK_ENV_UTILS_UNIX_WIN",
+    "limit_recursion_dir_search": {
+      "win": 4
+    },
+    "only_for_host_os_tags": [
+      "windows"
+    ],
+    "soft_file": {
+      "win": "expr.exe"
+    },
+    "soft_file_from_host_os": "yes",
+    "soft_path_example": {
+      "win": ""
+    }
+  },
+  "env": {
+  },
+  "soft_name": "Unix Utils for Windows",
+  "tags": [
+    "utils",
+    "unix-win"
+  ]
+}
